--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -2,7 +2,6 @@
     overflow-y: scroll;
     width: calc(100% - 150px);
     height: 100vh;
-    min-height: 500px;
     margin-right: 150px;
     .wellcome {
         margin: auto;
@@ -87,6 +86,7 @@
         margin-top: 120px;
         .wellcome {
             margin-top: 152px;
+            width: 270px;
             h1 {
                 color: #307CAE;
                 font-size: 2rem;
